[gd_scene load_steps=19 format=3 uid="uid://ckx4pgnacau0i"]

[ext_resource type="Script" uid="uid://y01yp5jqupge" path="res://code/player/hud.gd" id="1_x65cj"]
[ext_resource type="Script" uid="uid://hpmnb8n3f0n" path="res://code/player/resource_bar.gd" id="2_1s2ai"]
[ext_resource type="Texture2D" uid="uid://b2wcjw2km4vjf" path="res://art/textures/ui/battery2.png" id="3_6m4ql"]
[ext_resource type="FontFile" uid="uid://c46lihhopk2wc" path="res://art/fonts/PressStart2P-Regular.ttf" id="4_5fqad"]
[ext_resource type="Texture2D" uid="uid://bmw35cwms6w7t" path="res://art/textures/ui/mapselect/Canister.png" id="5_ektdj"]
[ext_resource type="Script" uid="uid://durs6dd5ncgap" path="res://code/player/fuel_display.gd" id="5_jtpgg"]

[sub_resource type="Environment" id="Environment_s7i6o"]
background_mode = 1
background_color = Color(0, 0.0392157, 0.0196078, 1)
ambient_light_source = 1
reflected_light_source = 1
glow_enabled = true
glow_normalized = true
glow_intensity = 2.21
glow_strength = 0.72
glow_bloom = 0.55
glow_blend_mode = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cg4l6"]
bg_color = Color(0, 0, 0, 1)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ufyep"]
bg_color = Color(0.36, 0.324, 0, 1)

[sub_resource type="Animation" id="Animation_lydnu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.36, 0.324, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_styles/background:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_yyh7t"]
resource_name = "warning"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:theme_override_styles/fill:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(0.36, 0.324, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:theme_override_styles/background:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_46h7k"]
_data = {
&"RESET": SubResource("Animation_lydnu"),
&"warning": SubResource("Animation_yyh7t")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xdm3l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qpfcg"]
bg_color = Color(1, 1, 0, 1)
corner_detail = 1

[sub_resource type="FontVariation" id="FontVariation_lfv0r"]
base_font = ExtResource("4_5fqad")

[sub_resource type="LabelSettings" id="LabelSettings_iqvll"]
font = SubResource("FontVariation_lfv0r")
font_size = 8
font_color = Color(0, 1, 0.227451, 1)
shadow_size = 0

[sub_resource type="ViewportTexture" id="ViewportTexture_5rj5o"]
viewport_path = NodePath("ModuleViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_77x52"]
viewport_path = NodePath("MinimapViewport")

[node name="MainCamera" type="Camera3D" node_paths=PackedStringArray("energy_bar")]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
cull_mask = 1048569
fov = 87.0
script = ExtResource("1_x65cj")
energy_bar = NodePath("HUD/Energy Bar")
main_camera_offset = Vector3(0, 25, 0)
module_camera_offset = Vector3(13, 10, -13)

[node name="ModuleViewport" type="SubViewport" parent="."]
transparent_bg = true
use_hdr_2d = true
canvas_cull_mask = 4293918722

[node name="ModuleCamera" type="Camera3D" parent="ModuleViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
cull_mask = 2
environment = SubResource("Environment_s7i6o")
projection = 1
current = true
fov = 37.8493
size = 32.0

[node name="MinimapViewport" type="SubViewport" parent="."]
use_hdr_2d = true
canvas_cull_mask = 4293918724

[node name="MinimapCamera" type="Camera3D" parent="MinimapViewport"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 10, 0)
cull_mask = 4
environment = SubResource("Environment_s7i6o")
projection = 1
current = true
fov = 37.8493
size = 100.0

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Energy Bar" type="Control" parent="HUD" node_paths=PackedStringArray("bar_main", "bar_under", "overlay", "numbers", "animator")]
layout_mode = 3
anchors_preset = 0
offset_left = 1087.0
offset_top = 497.0
offset_right = 1087.0
offset_bottom = 497.0
size_flags_horizontal = 0
script = ExtResource("2_1s2ai")
change_speed = 25.0
change_wait = 1.2
base_max_value = 100.0
max_max_value = 6000.0
overlay_base_height = 750
overlay_max_height = 6500
bar_base_height = 30
bar_max_height = 605
bar_base_pos = -55
bar_max_pos = -625
bar_main = NodePath("ProgressBar2/ProgressBar")
bar_under = NodePath("ProgressBar2")
overlay = NodePath("ProgressBar2/Overlay")
numbers = NodePath("ProgressBar2/Overlay/Display")
animator = NodePath("ProgressBar2/AnimationPlayer")

[node name="ProgressBar2" type="ProgressBar" parent="HUD/Energy Bar"]
layout_mode = 0
offset_left = 8.0
offset_top = -55.0
offset_right = 38.0
offset_bottom = -25.0
theme_override_styles/background = SubResource("StyleBoxFlat_cg4l6")
theme_override_styles/fill = SubResource("StyleBoxFlat_ufyep")
max_value = 1.0
value = 1.0
fill_mode = 3
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/Energy Bar/ProgressBar2"]
libraries = {
&"": SubResource("AnimationLibrary_46h7k")
}

[node name="ProgressBar" type="ProgressBar" parent="HUD/Energy Bar/ProgressBar2"]
layout_mode = 2
offset_right = 30.0
offset_bottom = 30.0
theme_override_styles/background = SubResource("StyleBoxEmpty_xdm3l")
theme_override_styles/fill = SubResource("StyleBoxFlat_qpfcg")
max_value = 1.0
value = 1.0
fill_mode = 3
show_percentage = false

[node name="Overlay" type="NinePatchRect" parent="HUD/Energy Bar/ProgressBar2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_top = -19.0
offset_right = 905.0
offset_bottom = 731.0
grow_horizontal = 2
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_6m4ql")
patch_margin_left = 475
patch_margin_top = 200
patch_margin_right = 475
patch_margin_bottom = 300

[node name="Display" type="Label" parent="HUD/Energy Bar/ProgressBar2/Overlay"]
texture_filter = 1
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -155.0
offset_top = -170.0
offset_right = -123.0
offset_bottom = -152.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(10, 10)
text = "0010"
label_settings = SubResource("LabelSettings_iqvll")
horizontal_alignment = 2

[node name="Module Display" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
offset_left = 98.0
offset_top = 383.0
offset_right = 98.0
offset_bottom = 383.0

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="HUD"]
layout_mode = 0
offset_left = 1.0
offset_top = 262.0
offset_right = 129.0
offset_bottom = 390.0
scale = Vector2(3, 3)
stretch_mode = 1
alignment_horizontal = 0
alignment_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HUD/AspectRatioContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
texture = SubResource("ViewportTexture_5rj5o")
expand_mode = 2

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="HUD"]
layout_mode = 2
offset_left = 1013.0
offset_top = 509.0
offset_right = 1141.0
offset_bottom = 637.0
stretch_mode = 1
alignment_horizontal = 0
alignment_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HUD/AspectRatioContainer2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
texture = SubResource("ViewportTexture_77x52")
expand_mode = 2

[node name="Fuel indicator" type="ColorRect" parent="HUD" node_paths=PackedStringArray("fuel_display")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_bottom = 44.0
grow_horizontal = 0
color = Color(0, 0, 0, 1)
script = ExtResource("5_jtpgg")
fuel_display = NodePath("HBoxContainer/Fuel Label")

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Fuel indicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="HUD/Fuel indicator/HBoxContainer"]
modulate = Color(0.514008, 0.191253, 0, 1)
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("5_ektdj")
expand_mode = 4
stretch_mode = 4

[node name="Fuel Label" type="Label" parent="HUD/Fuel indicator/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
